--- a/testjump.html
+++ b/testjump.html
@@ -375,6 +375,9 @@
             alert("广告观看完成");
         }
 
+        function onBackRefresh() {
+            alert("刷新接口数据");
+        }
 
         function doclockcallback(comicId, code) {
             alert("打卡漫画:" +
