--- a/testjump.html
+++ b/testjump.html
@@ -399,6 +399,9 @@
         function detail_share() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=dir&comic_id=105143&action=share");
         }
+        function rank_finish() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=ranking&sorttype=finish&ranktype=collect_num&timetype=month");
+        }
 
         function cattoon() {
             $("#toApp").attr("src", "tcattoonapp://goto?page=dir&comic_id=2");
@@ -542,6 +545,7 @@
 <a class="btn" href="javascript:detail_score()">详情页评分</a><br/>
 <a class="btn" href="javascript:detail_clock()">详情页打卡</a><br/>
 <a class="btn" href="javascript:detail_share()">详情页分享</a><br/>
+<a class="btn" href="javascript:rank_finish()">完结榜单</a><br/>
 
 
 </body>
