--- a/test.html
+++ b/test.html
@@ -62,8 +62,7 @@
                                 a)
                     }
                 }
-            console.log(info)
-           alert(JSON.stringify(info))
+            return JSON.stringify(info)
         }
 
         function comicshare() {
