--- a/testjump.html
+++ b/testjump.html
@@ -245,6 +245,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=5&type=9");
         }
 
+        function freecard3() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=freecard&card_type=2&type=10");
+        }
+
         function clearcard() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=clearcard&card_type=1");
         }
@@ -488,6 +492,7 @@
 <a class="btn" href="javascript:msg_focus()">跳转到im关注消息列表</a><br/>
 <a class="btn" href="javascript:freecard()">跳转到免费卡</a><br/>
 <a class="btn" href="javascript:freecard2()">跳转到倍卡</a><br/>
+<a class="btn" href="javascript:freecard3()">跳转到打折卡</a><br/>
 <a class="btn" href="javascript:clearcard()">跳转到净化卡</a><br/>
 <a class="btn" href="javascript:vipcard()">跳转到贵宾卡</a><br/>
 <a class="btn" href="javascript:ciyuanexchange()">次元兑换</a><br/>
@@ -546,6 +551,14 @@
 <a class="btn" href="javascript:detail_clock()">详情页打卡</a><br/>
 <a class="btn" href="javascript:detail_share()">详情页分享</a><br/>
 <a class="btn" href="javascript:rank_finish()">完结榜单</a><br/>
+
+<a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=5">tkanmanapp://goto?page=freecard&card_type=3&type=5</a><br/>
+<a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=3">tkanmanapp://goto?page=freecard&card_type=3&type=3</a><br/>
+<a class="btn" href="tkanmanapp://goto?page=freecard&card_type=2&type=10">tkanmanapp://goto?page=freecard&card_type=2&type=10</a><br/>
+<a class="btn" href="tkanmanapp://goto?page=vipcard&card_type=4">tkanmanapp://goto?page=vipcard&card_type=4</a><br/>
+<a class="btn" href="tkanmanapp://goto?page=ciyuanexchange&card_type=2001">tkanmanapp://goto?page=ciyuanexchange&card_type=2001</a><br/>
+<a class="btn" href="tkanmanapp://goto?page=recharge&tabindex=4">tkanmanapp://goto?page=recharge&tabindex=4</a><br/>
+
 
 
 </body>
