--- a/test.html
+++ b/test.html
@@ -187,6 +187,9 @@
         function novelrank() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novelrank");
         }
+        function openBrowser() {
+            $("#toApp").attr("src", "tkanmanapp://openBrowser");
+        }
 
         function novelclassify() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novelclassify");
@@ -360,6 +363,7 @@
 <a class="btn" href="javascript:novelBook()"> 小说书单页</a><br/>
 <a class="btn" href="javascript:novelclassify()"> 小说分类</a><br/>
 <a class="btn" href="javascript:novelrank()"> 小说排行榜</a><br/>
+<a class="btn" href="javascript:openBrowser()">在浏览器中打开</a><br/>
 
 <a class="btn" href="javascript:isInstall()"> 是否安装漫画台</a><br/>
 <a class="btn" href="javascript:openApp()"> 打开漫画台</a><br/>
