--- a/test.html
+++ b/test.html
@@ -188,7 +188,7 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=novelrank");
         }
         function openBrowser() {
-            $("#toApp").attr("src", "tkanmanapp://openBrowser");
+            $("#toApp").attr("src", "tkanmanapp://browser");
         }
 
         function novelclassify() {
