--- a/test.html
+++ b/test.html
@@ -192,7 +192,7 @@
         }
 
         function openBrowserurl() {
-            $("#toApp").attr("src", "tkanmanapp://browser?url=http%3A%2F%2Fwww.baidu.com");
+            $("#toApp").attr("src", "tkanmanapp://browser?url=https%3A%2F%2Fwww.baidu.com");
         }
 
         function novelclassify() {
