--- a/ysxy.htm
+++ b/ysxy.htm
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>隐私政策</title>
+    <title>小明太极漫画平台隐私政策</title>
     <meta name="keywords" content="穿越西元3000后,偷星九月天,斗罗大陆,斗罗大陆漫画,斗破苍穹漫画,漫画大全">
     <meta name="description" itemprop="description"
           content="看漫画致力于打造国内最专业的正版漫画阅读平台，拥有偷星九月天、斗罗大陆、斗破苍穹、浪漫传说、暴走邻家等大批优秀国产漫画的正版授权。看漫画，为漫画而生，看偷星九月天漫画、斗罗大陆漫画、斗破苍穹漫画就上看漫画">
@@ -36,7 +36,7 @@
 </head>
 <body>
 <div class="warp">
-    <h1>隐私政策</h1>
+    <h1>小明太极漫画平台隐私政策</h1>
     <p>
         小明太极（以下称“我们”）深知个人信息对用户（以下称“您”）的重要性，因此我们非常重视保护您的个人信息，并将严格按照本隐私政策的规定处理和保护您的个人信息，因此我们希望您能够仔细阅读、充分理解本隐私政策的全文，并在需要时，按照本隐私政策的指引，作出您认为适当的选择。</p>
     <p>您承诺在您开始使用本产品（或服务）时是成年人。如您是未成年人，则需要您的监护人同意您使用本应用并同意相关应用服务条款及本隐私政策。</p>
@@ -164,10 +164,10 @@
         11、其他法律法规等规定的情形。</p>
     <h2>三、小明太极如何保护您的个人信息</h2>
     <p>小明太极十分重视个人信息安全，我们采取业内标准做法来保护您的个人信息，防止造成未经授权的访问、披露、使用、修改损坏或丢失，主要如下：</p>
-    <h3>（一）我们采取一切合理可行的措施，确保个人信息收集的最小化，未收集与产品（或服务）目的无关的个人信息。</h3>
-    <h3>（二）我们会使用加密技术确保数据传输和存储的机密性。我们会使用受信赖的保护机制防止数据和存储数据的服务器遭到恶意攻击。</h3>
-    <h3>（三）我们已建立访问控制机制，确保只有授权人员才可访问个人信息。</h3>
-    <h3>（四）除本隐私政策规定情形外，未经您的授权同意，我们不会向任何无关第三方授权使用您的个人信息。若依据您的授权须向第三方披露您的信息以便于实现您所需要的服务的，在该服务结束后，我们将阻断该第三方继续访问您的个人信息。</h3>
+    <p>（一）我们采取一切合理可行的措施，确保个人信息收集的最小化，未收集与产品（或服务）目的无关的个人信息。</p>
+    <p>（二）我们会使用加密技术确保数据传输和存储的机密性。我们会使用受信赖的保护机制防止数据和存储数据的服务器遭到恶意攻击。</p>
+    <p>（三）我们已建立访问控制机制，确保只有授权人员才可访问个人信息。</p>
+    <p>（四）除本隐私政策规定情形外，未经您的授权同意，我们不会向任何无关第三方授权使用您的个人信息。若依据您的授权须向第三方披露您的信息以便于实现您所需要的服务的，在该服务结束后，我们将阻断该第三方继续访问您的个人信息。</p>
     <p>
         请您知悉并理解，我们会尽力保护您的个人信息。尽管如此，任何措施都无法做到无懈可击，也没有任何产品与服务、网站、数据传输、计算机系统是绝对安全的。我们强烈建议您通过安全方式、使用复杂密码等手段协助我们保证您的账号安全。如您发现自己的个人信息发生泄露，尤其是您的账号或密码发生泄露，请您立即根据本隐私政策提供的联系方式联系我们，以便我们及时采取相应措施来保护您的个人信息安全。</p>
     <p>
