--- a/testjump.html
+++ b/testjump.html
@@ -126,6 +126,10 @@
         function communitytopic() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=communitytopic&topic_id=1&tab_index=1");
         }
+
+        function communityrecommend() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communityrecommend");
+        }
         function signin() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=signin");
         }
@@ -472,6 +476,7 @@
 <a class="btn" href="javascript:communitycircle()"> 圈子详情页</a><br/>
 <a class="btn" href="javascript:communityarticle()"> 帖子详情页</a><br/>
 <a class="btn" href="javascript:communitytopic()"> 话题详情页</a><br/>
+<a class="btn" href="javascript:communityrecommend()">推荐关注</a><br/>
 <a class="btn" href="javascript:signin()"> 签到</a><br/>
 <a class="btn" href="javascript:follow()"> 关注</a><br/>
 <a class="btn" href="javascript:fans()"> 粉丝</a><br/>
