--- a/testjump.html
+++ b/testjump.html
@@ -128,7 +128,7 @@
         }
 
         function communityrecommend() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=communityrecommend");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=communityrecommend&tab_index=0");
         }
         function signin() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=signin");
