--- a/test_read.html
+++ b/test_read.html
@@ -30,7 +30,7 @@
         }
 
 
-        function webtoRead2() {
+        function webtoRead() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Ddir%26comic_id%3D8687%26chapter_id%3D151074");
         }
         function webtoRead2() {
