--- a/test_read.html
+++ b/test_read.html
@@ -9,7 +9,7 @@
     <script src="./clipboard.min.js"></script>
     <script type="text/javascript">
         //        showData();
-        showTest();
+//        showTest();
 
 
         $(function () {
