--- a/test_read.html
+++ b/test_read.html
@@ -58,5 +58,10 @@
 <a class="btn" href="https://apple-site.321mh.com/smallkmh_app/?page=dir&comic_id=8687&chapter_id=151074">看漫app内打开阅读页</a><br/><br/>
 
 
+<a class="btn" href="https://comicsdk.321mh.com/mhtlite_app?page=dir&comic_id=8687&chapter_id=151074">漫画台app内打开阅读页</a><br/><br/>
+<a class="btn" href="https://comicsdk.321mh.com/smh_app?page=dir&comic_id=8687&chapter_id=151074">神漫画app内打开阅读页</a><br/><br/>
+<a class="btn" href="https://comicsdk.321mh.com/iym_app?page=dir&comic_id=8687&chapter_id=151074">爱优漫app内打开阅读页</a><br/><br/>
+
+
 </body>
 </html>
