--- a/test_read.html
+++ b/test_read.html
@@ -44,6 +44,11 @@
         }
 
 
+        function dirMkz() {
+            $("#toApp").attr("src", "mkzhan://center?link=app://211516/");
+        }
+
+
 
     </script>
 </head>
@@ -53,6 +58,7 @@
 <a class="btn" href="javascript:webtoapp()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:webtoRead()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:webtoRead2()">看漫app内打开此页面</a><br/><br/>
+<a class="btn" href="javascript:dirMkz()">漫客栈</a><br/><br/>
 <a class="btn" href="https://apple-site.321mh.com/smallkmh_app/?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html">看漫app内打开ios</a><br/><br/>
 <a class="btn" href="https://comicsdk.321mh.com/mhtlite_app?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Ddir%26comic_id%3D8687%26chapter_id%3D151074">看漫app内打开阅读页</a><br/><br/>
 <a class="btn" href="https://apple-site.321mh.com/smallkmh_app/?page=dir&comic_id=8687&chapter_id=151074">看漫app内打开阅读页</a><br/><br/>
