--- a/test_read.html
+++ b/test_read.html
@@ -26,7 +26,7 @@
 
 
         function webtoapp() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
+            $("#toApp").attr("src", "tisamanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
         }
 
 
@@ -56,6 +56,9 @@
         function dirMkz2() {
             $("#toApp").attr("src", "mkzhan://center?link=https://canyinghao2.github.io/manhua/test_read.html");
         }
+        function tisamanapp() {
+            $("#toApp").attr("src", "tisamanapp://goto?page=dir&comic_id=8687");
+        }
 
 
 
@@ -70,6 +73,8 @@
 <a class="btn" href="javascript:dirMkz()">漫客栈</a><br/><br/>
 <a class="btn" href="javascript:dirMkz2()">漫客栈2</a><br/><br/>
 <a class="btn" href="javascript:dirMkz3()">漫客栈3</a><br/><br/>
+<a class="btn" href="javascript:dirMkz3()">漫客栈3</a><br/><br/>
+<a class="btn" href="javascript:tisamanapp()">爱飒漫画</a><br/><br/>
 <a class="btn" href="https://apple-site.321mh.com/smallkmh_app/?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html">看漫app内打开ios</a><br/><br/>
 <a class="btn" href="https://comicsdk.321mh.com/mhtlite_app?page=web&url=tkanmanapp%3A%2F%2Fgoto%3Fpage%3Ddir%26comic_id%3D8687%26chapter_id%3D151074">看漫app内打开阅读页</a><br/><br/>
 <a class="btn" href="https://apple-site.321mh.com/smallkmh_app/?page=dir&comic_id=8687&chapter_id=151074">看漫app内打开阅读页</a><br/><br/>
