--- a/test_read.html
+++ b/test_read.html
@@ -26,7 +26,7 @@
 
 
         function webtoapp() {
-            $("#toApp").attr("src", "tisamanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
+            $("#toApp").attr("src", "zymk://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
         }
 
 
@@ -57,7 +57,7 @@
             $("#toApp").attr("src", "mkzhan://center?link=https://canyinghao2.github.io/manhua/test_read.html");
         }
         function tisamanapp() {
-            $("#toApp").attr("src", "tisamanapp://goto?page=dir&comic_id=8687");
+            $("#toApp").attr("src", "zymkapp://goto?page=dir&comic_id=2392");
         }
 
 
