--- a/test_read.html
+++ b/test_read.html
@@ -26,7 +26,7 @@
 
 
         function webtoapp() {
-            $("#toApp").attr("src", "zymk://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
+            $("#toApp").attr("src", "zymkapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftest_read.html");
         }
 
 
