--- a/test_read.html
+++ b/test_read.html
@@ -48,7 +48,7 @@
             $("#toApp").attr("src", "mkzhan://center?link=app://211516/712084/");
         }
         function dirMkz3() {
-            $("#toApp").attr("src", "app://211516/712084/");
+            $("#toApp").attr("src", "app://211516/");
         }
 
         function dirMkz43() {
