--- a/test_read.html
+++ b/test_read.html
@@ -48,7 +48,10 @@
             $("#toApp").attr("src", "mkzhan://center?link=app://211516/712084/");
         }
         function dirMkz3() {
+            alert("navigator.userAgent: " + navigator.userAgent + "<br />");
+
             $("#toApp").attr("src", "app://211516/");
+
         }
 
         function dirMkz43() {
@@ -59,6 +62,7 @@
             $("#toApp").attr("src", "mkzhan://center?link=https://canyinghao2.github.io/manhua/test_read.html");
         }
         function tisamanapp() {
+
             $("#toApp").attr("src", "zymkapp://goto?page=dir&comic_id=2392&chapter_id=114183");
         }
 
