--- a/test_read.html
+++ b/test_read.html
@@ -74,7 +74,7 @@
 
 <img src="./file/10.jpg" width="0" height="0" />
 
-<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面</a><br/><br/>
+<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面ccccccc</a><br/><br/>
 <a class="btn" href="javascript:webtoRead()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:webtoRead2()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:dirMkz()">漫客栈</a><br/><br/>
