--- a/test_read.html
+++ b/test_read.html
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-<img src="./file/10.jpg" width="0" height="0" />
+<img src="https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg" width="0" height="0" />
 
 <a class="btn" href="javascript:webtoapp()">看漫app内打开此页面ccccccc</a><br/><br/>
 <a class="btn" href="javascript:webtoRead()">看漫app内打开此页面</a><br/><br/>
