--- a/test_zy.html
+++ b/test_zy.html
@@ -125,6 +125,7 @@
 </head>
 <body>
 
+<img src="https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg"  />
 
 <a class="btn" href="javascript:webtoapp()" >app内打开此页面</a><br/>
 <a class="btn" href="javascript:webtocomickm()" >app内打开漫画h5 km</a><br/>
