--- a/test_read.html
+++ b/test_read.html
@@ -7,6 +7,45 @@
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="./clipboard.min.js"></script>
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+
+    <script type="text/javascript" > 
+    var tit = "xxxx"; //标题 
+    var img = "https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg"; //图片 
+    var con = "xxxx"; //简介 
+    var link = window.location.href; //链接 
+    document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() { 
+    // 发送给好友 
+    WeixinJSBridge.on('menu:share:appmessage', function (argv) { 
+    WeixinJSBridge.invoke('sendAppMessage', { 
+    "appid": "wx0d8ec3a123c79fef", 
+    "img_url": img, 
+    "img_width": "160", 
+    "img_height": "160", 
+    "link": link, 
+    "desc": con, 
+    "title": tit 
+    }, function (res) { 
+    _report('send_msg', res.err_msg); 
+    }) 
+    }); 
+
+    // 分享到朋友圈 
+    WeixinJSBridge.on('menu:share:timeline', function (argv) { 
+    WeixinJSBridge.invoke('shareTimeline', { 
+    "img_url": img, 
+    "img_width": "160", 
+    "img_height": "160", 
+    "link": link, 
+    "desc": con, 
+    "title": tit 
+    }, function (res) { 
+    _report('timeline', res.err_msg); 
+    }); 
+    }); 
+    }, false) 
+    </script>
+
     <script type="text/javascript">
         //        showData();
 //        showTest();
@@ -20,6 +59,7 @@
 
 
         });
+
 
 
 
@@ -74,7 +114,7 @@
 
 <img src="https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg" width="0" height="0" />
 
-<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面ccccccc</a><br/><br/>
+<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面xxx</a><br/><br/>
 <a class="btn" href="javascript:webtoRead()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:webtoRead2()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:dirMkz()">漫客栈</a><br/><br/>
