--- a/test_read.html
+++ b/test_read.html
@@ -7,7 +7,7 @@
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="text/javascript"></script>
     <script src="./clipboard.min.js"></script>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 
     <script type="text/javascript" > 
     var tit = "xxxx"; //标题 
