--- a/test_read.html
+++ b/test_read.html
@@ -10,9 +10,9 @@
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 
     <script type="text/javascript" > 
-    var tit = "xxxx"; //标题 
+    var tit = "xxxxpppppp"; //标题 
     var img = "https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg"; //图片 
-    var con = "xxxx"; //简介 
+    var con = "xxxxxcccccc"; //简介 
     var link = window.location.href; //链接 
     document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() { 
     // 发送给好友 
@@ -114,7 +114,7 @@
 
 <img src="https://tvax3.sinaimg.cn/crop.0.0.996.996.180/006CICfxly8fuocvrjczfj30ro0rodgv.jpg" width="0" height="0" />
 
-<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面xxx</a><br/><br/>
+<a class="btn" href="javascript:webtoapp()">看漫app内打开此页面mmmx</a><br/><br/>
 <a class="btn" href="javascript:webtoRead()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:webtoRead2()">看漫app内打开此页面</a><br/><br/>
 <a class="btn" href="javascript:dirMkz()">漫客栈</a><br/><br/>
