--- a/test_zy.html
+++ b/test_zy.html
@@ -130,7 +130,7 @@
         }
 
         function buyInApp() {
-            $("#toApp").attr("src", "zymkapp://buyInApp?id=cn.zymk.comic.MKWeekly.vip13");
+            $("#toApp").attr("src", "zymkapp://buyInApp?id=cn.zymk.comic.MKWeekly.vip13&phone=15609070027");
         }
 
         function login() {
