--- a/index_qm.html
+++ b/index_qm.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="side-download">
                     <a href="http://itunes.apple.com/cn" class="iphone-btn">iPhone</a>
-                    <a href="https://raw.githubusercontent.com/canyinghao2/manhua/master/apk/master_com.kanman.allfree_2006240809_1.0.6"
+                    <a href="https://canyinghao2.github.io/manhua/apk/master_com.kanman.allfree_2006240809_1.0.6.apk"
                        class="android-btn">Android</a>
 
                 </div>
