--- a/testjump.html
+++ b/testjump.html
@@ -415,10 +415,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=gotomarket");
         }
         function nosharebtn() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=app&callback=nosharebtn");
+            $("#toApp").attr("src", "tkanmanapp://app?callback=nosharebtn");
         }
         function showsharebtn() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=app&callback=showsharebtn");
+            $("#toApp").attr("src", "tkanmanapp://app?callback=showsharebtn");
         }
 
         function cattoon() {
