--- a/testjump.html
+++ b/testjump.html
@@ -461,8 +461,8 @@
                 image: 'https://www.baidu.com/img/bd_logo1.png',
                 url: 'http://www.baidu.com',
                 callback: "sharecallback",
-                wxMiniProgramUserName: "gh_b446aa405cee",
-                wxMiniProgramPath: "pages/read/read?comicId=107961&chapterId=1694808",
+                wxMiniProgramUserName: "gh_c8aefba6a4d0",
+                wxMiniProgramPath: "",
                 qqMiniProgramUserName: "1109891985",
                 qqMiniProgramPath: "pages/read/read?comicId=107961&chapterId=1694808"
 
