--- a/testjump.html
+++ b/testjump.html
@@ -611,6 +611,8 @@
 <a class="btn" href="tkanmanapp://goto?page=ciyuanexchange&card_type=2001">tkanmanapp://goto?page=ciyuanexchange&card_type=2001</a><br/>
 <a class="btn" href="tkanmanapp://goto?page=recharge&tabindex=2">tkanmanapp://goto?page=recharge&tabindex=2</a><br/>
 
+<a class="btn" href="https://www.iqiyi.com/app/register_business/index.html?pluginParams=%257B%2522biz_id%2522%253A%2522102%2522%252C%2522biz_params%2522%253A%257B%2522biz_sub_id%2522%253A101%252C%2522biz_params%2522%253A%2522aid%253D240385901%2526tvid%253D2323365000%2526cid%253D4%2526offset%253D12%2526isCollectVideo%253D0%2522%252C%2522biz_extend_params%2522%253A%2522fv%253D%2526vvLog%253D%257B%255C%2522fromtype%255C%2522%253A27%252C%255C%2522fromsubtype%255C%2522%253A%255C%2522144%255C%2522%257D%2526isCheckHistory%253D0%2522%252C%2522biz_statistics%2522%253A%2522from_type%253D27%2526from_sub_type%253D144%2522%257D%257D&tvid=2323365000&aid=240385901&ftype=28&subtype=144&pid=qyclient&link_id=vfm%3ANULL%7C144%7Csafari%7C605.1.15%7CNULL%7Clongseriestplt%7Ch5base_re4v9obucet6l6mebspozo1g&backurl=https%3A%2F%2Fm.iqiyi.com%2Fv_19rsg64oo4.html">爱奇艺</a><br/>
+
 
 
 </body>
