--- a/qmmhjump.html
+++ b/qmmhjump.html
@@ -45,11 +45,12 @@
             $("#toApp").attr("src", "allfreeapp://goto?page=search");
 
         }
-
-        function registeragree() {
-            $("#toApp").attr("src", "allfreeapp://goto?page=registeragree");
+        function classify() {
+            $("#toApp").attr("src", "allfreeapp://goto?page=classify");
 
         }
+
+
         function mine() {
             $("#toApp").attr("src", "allfreeapp://goto?page=mine");
 
@@ -110,10 +111,7 @@
             $("#toApp").attr("src", "allfreeapp://goto?page=userfeedback");
 
         }
-        function userfeedbackmore() {
-            $("#toApp").attr("src", "allfreeapp://goto?page=userfeedbackmore");
 
-        }
         function userinfoedit() {
             $("#toApp").attr("src", "allfreeapp://goto?page=userinfoedit");
 
@@ -130,8 +128,8 @@
             $("#toApp").attr("src", "allfreeapp://goto?page=welfarecenter");
 
         }
-        function commentdetail() {
-            $("#toApp").attr("src", "allfreeapp://goto?page=commentdetail&comment_id=1");
+        function commentreply() {
+            $("#toApp").attr("src", "allfreeapp://goto?page=commentreply&comment_id=1");
 
         }
         function cash() {
@@ -195,7 +193,8 @@
 <a class="btn" href="javascript:login()"> 登录页</a><br/>
 <a class="btn" href="javascript:register()">注册页</a><br/>
 <a class="btn" href="javascript:search()">搜索页</a><br/>
-<a class="btn" href="javascript:registeragree()">注册服务条款</a><br/>
+<a class="btn" href="javascript:classify()">分类页</a><br/>
+
 <a class="btn" href="javascript:mine()">我的</a><br/>
 <a class="btn" href="javascript:account()">我的账户</a><br/>
 <a class="btn" href="javascript:accountpast()">过期记录</a><br/>
@@ -211,12 +210,11 @@
 <a class="btn" href="javascript:settingaccount()">帐号设置</a><br/>
 <a class="btn" href="javascript:setting()">设置</a><br/>
 <a class="btn" href="javascript:userfeedback()">帮助反馈</a><br/>
-<a class="btn" href="javascript:userfeedbackmore()">更多反馈</a><br/>
 <a class="btn" href="javascript:userinfoedit()">编辑资料</a><br/>
 <a class="btn" href="javascript:usernicknameedit()">编辑呢称</a><br/>
 <a class="btn" href="javascript:usersignededit()">编辑签名</a><br/>
 <a class="btn" href="javascript:welfarecenter()">福利中心</a><br/>
-<a class="btn" href="javascript:commentdetail()">评论</a><br/>
+<a class="btn" href="javascript:commentreply()">评论回复</a><br/>
 <a class="btn" href="javascript:cash()">提现</a><br/>
 <a class="btn" href="javascript:invitefrienddialog()">邀请好友弹窗</a><br/>
 
