--- a/qmmhjump.html
+++ b/qmmhjump.html
@@ -151,7 +151,8 @@
         }
 
         function showuser(data) {
-            alert(data)
+            var last = JSON.stringify(data);
+            alert(last);
         }
 
 
